--- a/recipes/Churros.html
+++ b/recipes/Churros.html
@@ -4,17 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Churros</title>
 </head>
 
 <body>
-    <p>
-    <h1>Odin Recipes</h1>
-    </p>
-
-    <p>
-    <a href="recipes/Churros.html">Churros</a>
-    </p>
-    
+    <h1>Churros</h1>
 </body>
 </html>
