added tacos recipe, and link to taco recipe to index

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <h1>Odin Recipes</h1>
     </p>
 
-    <p>
-    <a href="recipes/Churros.html">Churros</a>
-    </p>
+    <ul>
+        <a href="recipes/Churros.html">Recipe 1</a>
+        <a href="recipes/Tacos.html">Recipe 2</a>
+    </ul>
     
+
 </body>
 </html>
