Added mexican strawberry water recipe and link to it

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <ul>
         <a href="recipes/Churros.html">Recipe 1</a>
         <a href="recipes/Tacos.html">Recipe 2</a>
+        <a href="recipes/StrawberryWater.html">Recipe 3</a>
     </ul>
     
 
