fixed index recipe list bug

--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
     </p>
 
     <ul>
-        <a href="recipes/Churros.html">Recipe 1</a>
-        <a href="recipes/Tacos.html">Recipe 2</a>
-        <a href="recipes/StrawberryWater.html">Recipe 3</a>
+       <li> <a href="recipes/Churros.html">Recipe 1</a></li>
+        <li><a href="recipes/Tacos.html">Recipe 2</a></li>
+        <li><a href="recipes/StrawberryWater.html">Recipe 3</a></li>
     </ul>
     
-
 </body>
 </html>
