--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <p>
-    <h1>Odin Recipes</h1>
-    </p>
+        <h1>Odin Recipes</h1>
+
 
     <ul>
        <li> <a href="recipes/Churros.html">Recipe 1</a></li>
